Fix button wrapping

--- a/style.css
+++ b/style.css
@@ -1204,6 +1204,8 @@ BOX HOVER 8
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 0.4rem;
 }
 
 @media only screen and (max-width: 767px) {
